tests/style/dir_exclusions_invalid/expected_out.txt
=== PLAIN MODE ===
miss_hit.cfg: error: config file contains errors
In miss_hit.cfg, line 1
| exclude_dir: "potato"
|              ^^^^^^^^ error: does not exist
.: error: cannot find project root because the config file contains errors: please add a config file with the 'project_root' directive
MISS_HIT Style Summary: 2 file(s) analysed, 3 error(s)

=== HTML MODE ===
MISS_HIT Style Summary: 2 file(s) analysed, 3 error(s)
